# ComputerExperiments

./: README.md
sample/: CMakeLists.txt  array.c  array2func.c  bisection.c  cmatrix.h  complex.c  convert2matrix.py  dgemm.h  dgesvd.h  dgetrf.h  dgetrs.h  diag.c  dsyev.h  full_svd.c  func_1d.h  func_2d.h  gauss.c  golden_section.c  harmonic.c  histogram.c  lu_decomp.c  matfree.c  matrix_example.c  mersenne_twister.h  multiply.c  multiply_dgemm.c  poisson.h  poisson_dense.c  poisson_lu.c  poisson_sparse.c  random.c  sparse.c  square_lattice.c  steepest_descent_2d.c  svd.c  tridiagonal.c
