cmake_minimum_required(VERSION 3.15)
project(compexp C)
find_package(BLAS)
find_package(LAPACK)
file(GLOB SRC ${CMAKE_CURRENT_SOURCE_DIR}/*.c)
foreach(FNAME IN LISTS SRC)
    get_filename_component(TAG ${FNAME} NAME_WE)
    add_executable(${TAG} ${TAG}.c)
    target_compile_options(${TAG} PRIVATE ${FLAGS})
    target_compile_features(${TAG} PRIVATE c_std_11)
    target_link_libraries(${TAG} PRIVATE LAPACK::LAPACK BLAS::BLAS m)
endforeach(FNAME)
